--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,16 +10,19 @@ environment:
   sdk: ">=2.17.3 <3.0.0"
 
 dependencies:
-  bloc: ^8.0.3
+  bloc: ^8.1.0
   bloc_concurrency: ^0.2.0
   dio: ^4.0.6
-  equatable: ^2.0.3
-  expandable: ^5.0.1
+  equatable: ^2.0.5
+  file_picker: ^4.6.1
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.1
+  flutter_bloc: ^8.1.1
   get_it: ^7.2.0
   intl: ^0.17.0
+  open_file: ^3.2.1
+  path_provider: ^2.0.11
+  permission_handler: ^10.0.0
   stream_transform: ^2.0.0
   timelines: ^0.1.0
 
